--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: dpaudelR
 Title: What the Package Does (one line, title case)
 Version: 0.0.0.9000
-Authors@R: person("First", "Last", email = "first.last@example.com", role = c("aut", "cre"))
-Description: What the package does (one paragraph).
+Authors@R: person("Dev", "Paudel", email = "dpaudel@outlook.com", role = c("aut", "cre"))
+Description: Tidbits in R.
 Depends: R (>= 3.4.4)
 License: What license is it under?
 Encoding: UTF-8
