--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,3 +8,7 @@ License: What license is it under?
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.1.1
+devtools::use_package("dplyr")
+devtools::use_package("ggplot2")
+devtools::use_package("agricolae")
+devtools::use_package("Rmisc")
