--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,3 +12,4 @@ devtools::use_package("dplyr")
 devtools::use_package("ggplot2")
 devtools::use_package("agricolae")
 devtools::use_package("Rmisc")
+devtools::use_package("ggthemes")
