--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,7 +3,7 @@ Title: What the Package Does (one line, title case)
 Version: 0.0.0.9000
 Authors@R: person("Dev", "Paudel", email = "dpaudel@outlook.com", role = c("aut", "cre"))
 Description: Tidbits in R.
-Depends: R (>= 3.4.4)
+Depends: R (>= 3.4.4), ggthemes, Rmisc, agricolae, ggplot2, dplyr
 License: What license is it under?
 Encoding: UTF-8
 LazyData: true
