--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(anova_hsd)
 export(copy2clipboard)
 export(copyFromExcel)
 export(data_summary)
+export(data_transform)
 export(diagnostics)
 export(hapMap2genlight2)
 export(pin)
