--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,5 +9,6 @@ export(diagnostics)
 export(hapMap2genlight2)
 export(pin)
 export(plot_gwas_snp)
+export(singlify_header)
 export(theme_uf)
 export(write.list_dev)
