--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,7 +4,7 @@ Version: 0.0.0.9000
 Authors@R: person("Dev", "Paudel", email = "dpaudel@outlook.com", role = c("aut", "cre"))
 Description: Tidbits in R.
 Depends: R (>= 3.4.4), ggthemes, Rmisc, agricolae, ggplot2, dplyr
-License: What license is it under?
+License: CC0
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.1.1
