--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(copy2clipboard)
 export(copyFromExcel)
 export(data_summary)
 export(data_transform)
+export(dp_circlize_blast)
 export(diagnostics)
 export(hapMap2genlight2)
 export(pin)
