--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(dp_circlize_blast)
 export(diagnostics)
 export(hapMap2genlight2)
 export(pin)
+export(plot_blast_segment)
 export(plot_gwas_snp)
 export(singlify_header)
 export(theme_uf)
