--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(data_transform)
 export(dp_circlize_blast)
 export(diagnostics)
 export(hapMap2genlight2)
+export(here)
 export(pin)
 export(plot_blast_segment)
 export(plot_gwas_snp)
